selected file name list design fixes

--- a/src/main/resources/templates/admin_panel/_product.html
+++ b/src/main/resources/templates/admin_panel/_product.html
@@ -279,8 +279,8 @@
                                 <input id="book_cover_image" class="book_upload_cover_image"
                                        onchange="updatePhoto(this.id);" accept="image/x-png"
                                        style="visibility:hidden;" type="file">
-                                <p>Selected file:</p>
-                                <div id="book_cover_image_list"></div>
+                                <p style="padding-bottom: 6px;">Selected file:</p>
+                                <div id="book_cover_image_list" style="word-wrap: break-word;"></div>
                             </div>
 
                             <div class="col-md-4">
@@ -291,8 +291,8 @@
                                        accept="image/x-png"
                                        onchange="updatePhoto(this.id);"
                                        style="visibility:hidden;" type="file">
-                                <p>Selected files:</p>
-                                <div id="book_product_images_list"></div>
+                                <p style="padding-bottom: 6px;">Selected files:</p>
+                                <div id="book_product_images_list" style="word-wrap: break-word;"></div>
                             </div>
                             <div class="col-md-4">
                                 <input type="button" value="Add product" class="login_button trans_200" id="new_book">
@@ -493,8 +493,8 @@
                                 <input id="ebook_cover_image" class="ebook_upload_cover_image"
                                        onchange="updatePhoto(this.id);" accept="image/x-png"
                                        style="visibility:hidden;" type="file">
-                                <p>Selected file:</p>
-                                <div id="ebook_cover_image_list"></div>
+                                <p style="padding-bottom: 6px;">Selected file:</p>
+                                <div id="ebook_cover_image_list" style="word-wrap: break-word;"></div>
                             </div>
 
                             <div class="col-md-4">
@@ -505,8 +505,8 @@
                                 <input multiple id="ebook_product_images" class="ebook_upload_product_images"
                                        onchange="updatePhoto(this.id);" accept="image/x-png"
                                        style="visibility:hidden;" type="file">
-                                <p>Selected files:</p>
-                                <div id="ebook_product_images_list"></div>
+                                <p style="padding-bottom: 6px;">Selected files:</p>
+                                <div id="ebook_product_images_list" style="word-wrap: break-word;"></div>
                             </div>
                             <div class="col-md-4">
                                 <input type="button" value="Add product" class="login_button trans_200" id="new_ebook">
@@ -697,8 +697,8 @@
                                        onchange="updatePhoto(this.id);"
                                        style="visibility:hidden;" type="file">
 
-                                <p>Selected file:</p>
-                                <div id="audiobook_cover_image_list"></div>
+                                <p style="padding-bottom: 6px;">Selected file:</p>
+                                <div id="audiobook_cover_image_list" style="word-wrap: break-word;"></div>
                             </div>
 
                             <div class="col-md-4">
@@ -709,8 +709,8 @@
                                 <input multiple id="audiobook_product_images" class="audiobook_upload_product_images"
                                        onchange="updatePhoto(this.id);" accept="image/x-png"
                                        style="visibility:hidden;" type="file">
-                                <p>Selected files:</p>
-                                <div id="audiobook_product_images_list"></div>
+                                <p style="padding-bottom: 6px;">Selected files:</p>
+                                <div id="audiobook_product_images_list" style="word-wrap: break-word;"></div>
                             </div>
 
                             <div class="col-md-4">
@@ -1006,8 +1006,8 @@
                                 <input id="ebook_reader_cover_image" class="ebook_reader_upload_cover_image"
                                        onchange="updatePhoto(this.id);" accept="image/x-png"
                                        style="visibility:hidden;" type="file">
-                                <p>Selected file:</p>
-                                <div id="ebook_reader_cover_image_list"></div>
+                                <p style="padding-bottom: 6px;">Selected file:</p>
+                                <div id="ebook_reader_cover_image_list" style="word-wrap: break-word;"></div>
                             </div>
 
                             <div class="col-md-4">
@@ -1019,8 +1019,8 @@
                                        class="ebook_reader_upload_product_images"
                                        onchange="updatePhoto(this.id);" accept="image/x-png"
                                        style="visibility:hidden;" type="file">
-                                <p>Selected files:</p>
-                                <div id="ebook_reader_product_images_list"></div>
+                                <p style="padding-bottom: 6px;">Selected files:</p>
+                                <div id="ebook_reader_product_images_list" style="word-wrap: break-word;"></div>
                             </div>
                             <div class="col-md-4">
                                 <input type="button" value="Add product" class="login_button trans_200"
@@ -1171,8 +1171,8 @@
                                 <input id="ebook_reader_case_cover_image" class="ebook_reader_case_upload_cover_image"
                                        onchange="updatePhoto(this.id);" accept="image/x-png"
                                        style="visibility:hidden;" type="file">
-                                <p>Selected file:</p>
-                                <div id="ebook_reader_case_cover_image_list"></div>
+                                <p style="padding-bottom: 6px;">Selected file:</p>
+                                <div id="ebook_reader_case_cover_image_list" style="word-wrap: break-word;"></div>
                             </div>
                             <div class="col-md-4">
                                 <label for="ebook_reader_case_product_images"
@@ -1183,8 +1183,8 @@
                                        class="ebook_reader_case_upload_product_images"
                                        onchange="updatePhoto(this.id);" accept="image/x-png"
                                        style="visibility:hidden;" type="file">
-                                <p>Selected files:</p>
-                                <div id="ebook_reader_case_product_images_list"></div>
+                                <p style="padding-bottom: 6px;">Selected files:</p>
+                                <div id="ebook_reader_case_product_images_list" style="word-wrap: break-word;"></div>
                             </div>
                             <div class="col-md-4">
                                 <input type="button" value="Add product" class="login_button trans_200"
@@ -1321,8 +1321,8 @@
                                        class="book_case_upload_cover_image"
                                        onchange="updatePhoto(this.id);"
                                        style="visibility:hidden;" type="file">
-                                <p>Selected file:</p>
-                                <div id="book_case_cover_image_list"></div>
+                                <p style="padding-bottom: 6px;">Selected file:</p>
+                                <div id="book_case_cover_image_list" style="word-wrap: break-word;"></div>
                             </div>
                             <div class="col-md-4">
                                 <label for="book_case_product_images"
@@ -1332,8 +1332,8 @@
                                 <input multiple id="book_case_product_images" class="book_case_upload_product_images"
                                        onchange="updatePhoto(this.id);" accept="image/x-png"
                                        style="visibility:hidden;" type="file">
-                                <p>Selected files:</p>
-                                <div id="book_case_product_images_list"></div>
+                                <p style="padding-bottom: 6px;">Selected files:</p>
+                                <div id="book_case_product_images_list" style="word-wrap: break-word;"></div>
                             </div>
                             <div class="col-md-4">
                                 <input type="button" value="Add product" class="login_button trans_200"
