--- a/src/main/resources/templates/product_details/_images.html
+++ b/src/main/resources/templates/product_details/_images.html
@@ -39,8 +39,8 @@
                 <input id="cover_image"
                        onchange="updatePhoto(this.id);" accept="image/x-png" class="upload_cover_image"
                        style="visibility:hidden;" type="file">
-                <p>Selected file:</p>
-                <div id="cover_image_list"></div>
+                <p style="padding-bottom: 6px;">Selected file:</p>
+                <div id="cover_image_list" style="word-wrap: break-word;"></div>
             </div>
 
             <div class="col-md-2"></div>
@@ -99,8 +99,8 @@
                            accept="image/x-png"
                            onchange="updatePhoto(this.id);"
                            style="visibility:hidden;" type="file">
-                    <p>Selected file:</p>
-                    <div id="product_images_list"></div>
+                    <p style="padding-bottom: 6px;">Selected file:</p>
+                    <div id="product_images_list" style="word-wrap: break-word;"></div>
                 </div>
 
                 <div class="col-md-2"></div>
