product boxes style fixes

--- a/src/main/resources/static/styles/product.css
+++ b/src/main/resources/static/styles/product.css
@@ -1699,8 +1699,6 @@ section {
     text-align: center;
     max-width: 320px;
     height: 50px;
-    text-overflow: ellipsis;
-    overflow: hidden;
 }
 
 .our_picks_product_name a {
@@ -1708,6 +1706,11 @@ section {
     line-height: 1.2;
     color: #4a4a4a;
     font-weight: 500;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    word-wrap: break-word;
 }
 
 .our_picks_product_name a:hover,
@@ -2022,7 +2025,7 @@ section {
 }
 
 .product_image_showcase {
-    padding: 30px;
+    padding: 20px;
     height: 360px;
     text-align: center;
 }
@@ -2164,4 +2167,10 @@ section {
     border-radius: 5px;
     border: 1px #b3b3b3 solid;
     margin-left: 10px;
+}
+
+.vertical_center {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
