product page reviews admin view updated

--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -877,6 +877,11 @@
                                                                                 &#xf014;
                                                                             </button>
                                                                         </span>
+
+                                                                        <span th:if="${user.getRole() != 1}" th:unless="${review.getUserId() == user.getUserId()}">
+                                                                            <h5 class="review_date date"
+                                                                                th:text="${#dates.format(review.getUploadDate(), 'dd-MM-yyyy')}"></h5>
+                                                                        </span>
                                                                     </div>
                                                                 </div>
                                                             </div>
