--- a/src/main/resources/static/styles/user-details.css
+++ b/src/main/resources/static/styles/user-details.css
@@ -306,3 +306,11 @@ tr:nth-child(even) {
     align-items: center;
     justify-content: center;
 }
+
+.review_product_image {
+    max-width: 67px;
+    max-height: 75px;
+    border-style: solid;
+    border-color: #C0C0C0;
+    border-width: 1px;
+}
